[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GipsyX_Wrapper"
description = "A wrapper around JPL's GipsyX to facilitate bulk processing"
version = "0.0.1"
requires-python = "==3.7.*"
authors = [
    { name = "Bogdan Matviichuk", email = "bmgit@icloud.com" },
]
dependencies = [
    "blosc",
    "numpy",
    "pandas",
    "tqdm",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "jupyter"
]
